--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
     </div>
   </div>
 
-  
+  <script>
+    document.addEventListener("touchstart", function () { }, true);
+  </script>
 </body>
 </html>
