--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
 
   <script>
     document.addEventListener("touchstart", function () { }, true);
+
+    document.addEventListener('touchmove', function (event) {
+        if (event.scale !== 1) event.preventDefault();
+    })
+
   </script>
 </body>
 </html>
